dsprojects/static/Sass/style.scss
@import "scss/_functions.scss";
@import "scss/_mixins.scss";
@import "scss/_variables.scss";
@import "scss/mixins/_breakpoints.scss";
@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";

/*Sass mixins*/
@mixin fluid-type($properties, $min-vw, $max-vw, $min-value, $max-value) {
  @each $property in $properties {
    #{$property}: $min-value;
  }

  @media screen and (min-width: $min-vw) {
    @each $property in $properties {
      #{$property}: calc(#{$min-value} 
      + #{strip-unit($max-value - $min-value)} 
      * (100vw - #{$min-vw}) 
      / #{strip-unit($max-vw - $min-vw)});
    }
  }

  @media screen and (min-width: $max-vw) {
    @each $property in $properties {
      #{$property}: $max-value;
    }
  }
}

/*CONSTANTS*/
/*sizes*/
$banner_height:15vh;
$header_height:15vh;
$bottombar_height:10vh;
$disqus_height:15vh;
$side_padding:3vw;
$left_indent:10vw;
$fullwidth:100vw;
$fullheight:100vh;
$sidebarwidth:20vw;
/*colors*/
$forestgreen:#012800;
$green:#024e00;
$white:#fff;
$lightgray:#CFCFCF;

/*TAGS*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/*CLASSES*/
.container {
    display: grid;
    height:$fullheight;
    width:$fullwidth;
    min-width:$fullwidth;
    grid-template-rows: $header_height 50vh 1fr;
    grid-template-columns: 5vw 1fr; 
    min-height:$fullheight;
    padding-right: 0;
    padding-left: 0;
    margin-right: 0;
    margin-left: 0;
    @include media-breakpoint-up(lg) {
        min-width: auto;
    }
}

.threecolcontainer {
    display: grid;
    height: $bottombar_height;
    grid-template: $bottombar_height / repeat(3, 1fr); 
}

.projects_container {
    display: grid;
    grid-template-columns: $left_indent 80vw 1fr;
    grid-template-rows: $header_height auto;
    min-height: $fullheight;
    padding-right: 0;
    padding-left: 0;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: 15vh;
}

.project_entry {
    grid-column: 2 / span 1;
    height: min-content;
    margin-top: 2.5vh;
    border-color: $forestgreen;
    border-width: medium;
    border-style: solid;
    h2 {
        line-height: 5vh;
        background-color: $forestgreen;
        color: $lightgray;
        font-weight: bold;
        text-indent: 2.5vw;
        a {
            border-color: $forestgreen;
            border-style: solid;
            border-width: medium;
            font-size: 2.5rem;
            color: $lightgray;
            line-height: 5vh;
            display: block;
            text-decoration: none;
            &:active {
                background-color: $green;
                border-color: $green;
                color:$lightgray;
            }
            &:hover {
                border-color: $green;
                border-style: solid;
                border-width: medium;
            }
        }
    }
    p {
        font-size: 2.5rem;
        margin-left: 5vw;
        margin-right: 5vw;
        text-align: justify;
    }
}

.wrapper {
    display: flex;
    align-items: stretch;
    background-color:$lightgray;
    min-width:$fullwidth;
}

.header {
    width: $fullwidth;
    grid-area: 1 / 1 / 1 / span 5;
    @include media-breakpoint-up(lg) {
        width:$fullwidth - $sidebarwidth;
    }
    h1 {
        display:table-cell;
        vertical-align: bottom;
        align-self:end;
        padding-bottom:1vw;
        text-indent:5vw;
        white-space: nowrap;
        grid-area: 1 / 1 / 1 / span 5;
        width: $fullwidth;
        height:$header_height;
        font-size: 6.5vw;
        font-weight: bold;
        color: $lightgray;
        background-color:$forestgreen;
        @include media-breakpoint-up(lg) {
            font-size: 65px;
        }
    }
}

/*Sidebar*/
.sidebar {
    display:none;
    &.active {
        margin-left: -250px;
    }
    @include media-breakpoint-up(lg) {
        & .sidebarimage {
            width: 100%;
            height: auto;
            max-width: 50vw;
            position: relative;
            float: left;
        }
        display: flex;
        background: $forestgreen;
        color: $white;
        transition: all 0.3s;
        min-width: $sidebarwidth;
        max-width: $sidebarwidth;
        min-height: 50vh;
        flex-direction: column;
        position: relative;
        z-index: 0;
        ul li a {
            font-weight: bold;
            color: $lightgray;
            padding: 10px;
            font-size: 1.1em;
            display: block;
            &:hover {
                color: $white;
                background: $green;
                text-decoration: none;
            }
        }
        ul.components {
            padding: $side_padding 0;
            border-bottom: 1px solid $forestgreen;
            text-indent: .5vw;
            font-size: 1.5vw;
        }
    }
}

/*Bottom Bar (narrow screens)*/
.bottombar {
    @include media-breakpoint-up(lg) {
        display:none;
    }
    background: $forestgreen;
    color: $lightgray;
    transition: all 0.3s;
    display: flex;
    flex-direction: column-reverse;
    min-width: 100%;
    max-height: $banner_height;
    position: fixed;
    bottom: 0;
}

button.btn.btn_bottombar {
    width: 100%;
    background-color: $forestgreen;
    color: $lightgray;
    padding: 0;
    height: 100%;
    &:hover {
        background: $green;
    }
}

.row {
    display: block;
    margin-right: -15px;
    margin-left: -15px;
}

.collapsebuttonrow_bottombar{
    line-height: 3.5vh;
    background-color: $forestgreen;
    margin-left: -15px;
    margin-right: -15px;
    padding:0;
    @include media-breakpoint-up(lg) {
        display:none;
    }
}

.collapsebuttonrow_bottombar_btn {
    width: $fullwidth;
    background: $forestgreen;
    &:hover {
    	background: $green;
    }
    &:not(:disabled):not(.disabled):active {
        background: none;
    }
}

.bottombarrow {
    text-align: center;
    line-height: $bottombar_height;
    background: $forestgreen;
    padding:0;
    a {
        display: block;
        text-decoration: none;
        color: $lightgray;
        text-align: center;
        line-height: $bottombar_height;
        font-size: 3.5vh;
        font-weight: bold;
        width: 100%;
        &:hover {
            background: $green;
        }
    }
    @include media-breakpoint-up(lg) {
        display:none;
    }
}

.threecolcontainer {
    display: grid;
    height: $bottombar_height;
    grid-template: $bottombar_height / repeat(3, 1fr); 
}

.bottombarcol {
    grid-column: span 1;
    text-align: center;
    line-height: $bottombar_height;
    background:$forestgreen;
    padding:0;
    a {
        text-decoration: none;
        color: $lightgray;
        text-align: center;
        line-height: $bottombar_height;
        font-size: 3.5vh;
        font-weight: bold;
        width: 100%;
        &:hover {
            background: $green;
        }
    }
    @include media-breakpoint-up(lg) {
        display:none;
    }
}

.ct {
    margin-top: 5vh;
    font-size: xx-large;
    font-weight: bold;
}

.footerclass {
    color: $lightgray;
    font-size:2vh;
}

.homeicon {
    position: absolute;
    top: 3vh;
    right: 3vh;
    height: 5vh;
}

img.backicon {
    position: absolute;
    top: 3vh;
    right: 11vh;
    height: 5vh;
}

.resume_iframe {
    grid-column: 2 / span 3;
    margin-top: 2vh;
    margin-left: 5vw;
    
}

.resume_image {
    grid-column: 2 / span 3;
    margin-top: 2vh;
    margin-left: 5vw;
    width:80vw; 
    height:50vh;
    @include media-breakpoint-up(md) {
        display:none;
    }
}

.resumedownload {
    position: relative;
    top: 2vh;
    left: 10vw;
    font-weight: 600;
    font-size: 3vw;
}

.biocontainer {
    display: grid;
    height:$fullheight;
    width:$fullwidth;
    grid-template: $header_height 5vh 5vh 5vh 1fr/5vw 1fr;
    min-height:$fullheight;
    padding-right: 0;
    padding-left: 0;
    margin-right: auto;
    margin-left: 0;
}

.bioheader {
    grid-row: 3;
    grid-column: 2;
    font-weight: 670;
    font-size: 3vh;
}

.biolist {
    grid-row: 4;
    grid-column: 2;
    margin-left: 10vw;
    font-size: 2vh;
    font-weight: 550;
    li {
        padding: 1vh;
    }
}

.resultgrid {
    display: grid;
    height:auto;
    min-height:100vh;
    width:100vw;
    grid-template-rows: $header_height 10vh auto;
    grid-template-columns: 10vw 15vw 15vw 30vw 1fr;
    padding-right: 0;
    padding-left: 0;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: 15vh;
    @include media-breakpoint-up(lg) {
        margin-bottom: 2vh;
    }
}

.projectitem {
    grid-column: 1/span 4;
    display: grid;
    grid-template-columns: 45vw 40vw;
    grid-template-rows: 1fr 1fr;
    height: max-content;
    border: #444;
    border-style: solid;
    border-width: thin;
    border-radius: 10px;
    margin-left: 2vw;
    margin-right: 8vw;
    margin-top: 1vw;
    width: 85vw;
    padding-bottom:1vh;
    @include media-breakpoint-up(lg) {
        width: 75vw;
        grid-template-columns: 45vw 30vw;
    }
}

.resumecontainer {
    display: grid;
    height: 100vh;
    width: 100vw;
    grid-template: 15vh 3vh 1fr/5vw 30vw 1fr;
    min-height: 100vh;
    padding-right: 0;
    padding-left: 0;
    margin-right: auto;
    margin-left: 0;
}

div#disqus_thread {
    grid-row: 3;
    grid-column: 2 / span 1;
    margin-right: 5vw;
    margin-top: auto;
}

li#thread-share-bar {
    display: none;
}

li.install.disqus-footer__item {
    display: none;
}

.publisher-anchor-color a {
    color: $forestgreen !important;
}

#mapid {
    height: 80vw;
    margin-top: 10vh;
}

